--- a/redhat/frr.spec.in
+++ b/redhat/frr.spec.in
@@ -773,7 +773,10 @@ sed -i 's/ -M rpki//' %{_sysconfdir}/frr/daemons
 
 
 %changelog
-* Tue Mar  1 2022 Martin Winter <mwinter@opensourcerouting.org> - %{version}
+* Tue Sat  5 2022 Martin Winter <mwinter@opensourcerouting.org> - %{version}
+
+* Tue Sat  5 2022 Jafar Al-Gharaibeh <jafar@atcorp.com> - 8.2.1
+- Hot fix for bgp rpki hang issue
 
 * Tue Mar  1 2022 Jafar Al-Gharaibeh <jafar@atcorp.com> - 8.2
 - The FRRouting community would like to announce FRR Release 8.2.
